monticore-generator/src/test/resources/cocos/invalid/A2008/A2008c.mc4

/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A2008;

grammar A2008c extends mc.grammars.types.TestTypes{

    B = Name* names:Name*;
}